Fixed z-index issue

--- a/css/style.css
+++ b/css/style.css
@@ -362,7 +362,7 @@ a:link, a:visited, a:focus {
   display: none;
   background: #999;
   perspective: 1000px;
-  z-index: 2;
+  z-index: 4;
   left: 0; }
   .gallery-image-lightbox .title {
     text-align: right;
@@ -569,7 +569,7 @@ a:link, a:visited, a:focus {
       font-size: 3rem;
       text-align: center;
       padding: 1.5rem;
-      z-index: 3;
+      z-index: 2;
       box-shadow: 1px 11px 15px 2px; } }
 
 .header {
