--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -13,7 +13,7 @@
         font-size: 3rem;
         text-align: center;
         padding: 1.5rem;
-        z-index: 3;
+        z-index: 2;
         box-shadow: 1px 11px 15px 2px;
     }
 }
