--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -7,7 +7,7 @@
     display: none;
     background: $color-grey-dark-2;
     perspective: 1000px;
-    z-index: 2;
+    z-index: 4;
     left: 0;
 
     .title {
